# AA

./: .gitignore  CMakeLists.txt  approximation_hw.tex  fractional_knapsack.c  homework_knapsack.c  intervals.c  optimal_knapsack.c  tester.py
genetic/: crossover.py  encoding.py  evolution.txt  genetic_polynomial_max.json  genetic_polynomial_max.py  mutation.py  selection.py
genetic/homework/: evolution.txt  genetic_polynomial_max.json  genetic_polynomial_max.py
geometry/: cover.c  illegal_edges.c  intersection_horizontal_vertical_semiplanes.c  intersection_points.c  monotone_polygon.c  orientation.c  point_circumscribed_circle_position.c  point_convex_poly.c  point_horizontal_vertical_semiplanes.c  point_in_convex_polygon.c  point_in_polygon.c  point_poly_test.py  requirements.txt  roby.c  tsp_convex_hull.c
intervals/: to_wsl.sh
knapsack/: discrete_knapsack.c  fractional_knapsack.c  homework_knapsack.c
