cmake_minimum_required(VERSION 3.26)
project(AA C)

set(CMAKE_C_STANDARD 11)

if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
    add_compile_options(-Wall -Wextra -pedantic)
    if(UNIX)
        add_compile_options(-fsanitize=address -fsanitize=undefined -fsanitize=leak)
        add_link_options(-fsanitize=address -fsanitize=undefined -fsanitize=leak)
    else()
        add_compile_options(-ftrapv)
    endif()
endif()

add_executable(intervals intervals/intervals.c)
add_executable(fractional_knapsack knapsack/fractional_knapsack.c)
add_executable(homework_knapsack knapsack/homework_knapsack.c)
add_executable(discrete_knapsack knapsack/discrete_knapsack.c)
add_executable(cover geometry/cover.c)
add_executable(orientation geometry/orientation.c)
add_executable(roby geometry/roby.c)
add_executable(point_in_polygon geometry/point_in_polygon.c)
add_executable(point_in_convex_polygon geometry/point_in_convex_polygon.c)
add_executable(intersection_horizontal_vertical_semiplanes geometry/intersection_horizontal_vertical_semiplanes.c)
add_executable(point_circumscribed_circle_position geometry/point_circumscribed_circle_position.c)
add_executable(illegal_edges geometry/illegal_edges.c)
add_executable(intersection_points geometry/intersection_points.c)
add_executable(point_horizontal_vertical_semiplanes geometry/point_horizontal_vertical_semiplanes.c)
